--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,3 +4,29 @@ CommonButtonAcceptKeyHandling=TriggerClick
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=307350784C1AAABBD70C2C8F477FB84F
+
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode="/Script/pcas.PAAutoShooterGameMode"
+GameDefaultMap=/Game/Maps/World
+EditorStartupMap=/Game/Maps/World
+
+[/Script/pcas.PCAProjectSettings]
+BackendOrigin="http://10.123.0.160"
+TilesListPath="/tiles/list"
+RoutesPath="/routes/real"
+UploadPath="/images/upload"
+OriginLatitude=34.972910
+OriginLongitude=138.387616
+OriginHeight=50.0
+ScreenshotSubdirectory="Screenshots/Auto"
+CaptureResolution=(X=1920,Y=1080)
+TilesLoadGracePeriodSeconds=5.0
+PreCaptureStabilizationSeconds=3.0
+UploadRetryCount=3
+UploadRetryBackoffSeconds=2.0
+DirectionOffsetDegrees=0.0
+bExitApplicationOnFinish=True
+bExitEditorOnFinish=False
+DefaultWorldMapName="/Game/Maps/World"
+MovementBlendTimeSeconds=1.0
+RotationBlendTimeSeconds=0.5
