--- a/pcas.uproject
+++ b/pcas.uproject
@@ -20,7 +20,15 @@
 		},
 		{
 			"Name": "CesiumForUnreal",
-			"Enabled": true
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/87b0d05800a545d49bf858ef3458c4f7",
+			"SupportedTargetPlatforms": [
+				"Win64",
+				"Mac",
+				"Linux",
+				"Android",
+				"IOS"
+			]
 		}
 	]
 }
