Fix build error

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/World.World
 EditorStartupMap=/Game/World.World
+GlobalDefaultGameMode=/Script/pcas.PAAutoShooterGameMode
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
