--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -18,6 +18,7 @@ UploadPath="/images/upload"
 OriginLatitude=34.972910
 OriginLongitude=138.387616
 OriginHeight=50.0
+AltitudeOffsetMeters=10.0
 ScreenshotSubdirectory="Screenshots/Auto"
 CaptureResolution=(X=1920,Y=1080)
 TilesLoadGracePeriodSeconds=10.0
