--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -21,6 +21,8 @@ OriginHeight=50.0
 AltitudeOffsetMeters=10.0
 ScreenshotSubdirectory="Screenshots/Auto"
 CaptureResolution=(X=1920,Y=1080)
+bCaptureUseManualExposure=True
+CaptureManualExposureBias=-1.0
 TilesLoadGracePeriodSeconds=20.0
 PreCaptureStabilizationSeconds=30.0
 UploadRetryCount=3
